--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,10 @@ path = "src/lib.rs"
 
 [dependencies]
 protobuf = "=2.8.0"
-grpcio = { version = "0.5.0-alpha.4", default-features = false, features = ["secure"] }
+
 
 [build-dependencies]
 protobuf-build = { version = "0.10", default-features = false }
 
 [features]
-default = ["protobuf-codec"]
-protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "grpcio/protobuf-codec"]
+default = ["protobuf-build/protobuf-codec"]
